finished, clean up everything, review, fix bugs

--- a/index.html
+++ b/index.html
@@ -12,23 +12,32 @@
 		Select type of C4 to play:
 		<select id="SelectGameType">
 			<option value="0">Classic</option>
-			<option value="1">Alternative (Dropping)</option>
+			<option value="1">Alternative (Removing)</option>
 		</select>
 	</form>
 	<br>
 	<form>
 		Select play type:
 		<select id="SelectPlayType">
-			<option value="0">Human vs Human</option>
 			<option value="1">Human vs AI</option>
 			<option value="2">AI (dumb) vs AI</option>
+			<option value="0">Human vs Human</option>
 		</select>
 	</form>
 	<br>
-	<button id="initGame">Initiate</button>
+	<form>
+		Select AI difficulty:
+		<select id="SelectDepth">
+			<option value="6">Medium (6 Depth) (R)</option>
+			<option value="8">Hard (8 Depth)</option>
+			<option value="4">Trivial (4 Depth)</option>
+		</select>
+	</form>
+	<br>
+	<button id="initGame">Start</button>
 	<br>
 	<br>
-    <table id="board">
+    <table id="board" style="visibility:hidden">
       <tbody>
         <tr>
           <td></td>
@@ -86,6 +95,7 @@
         </tr>
       </tbody>
     </table>
+	<p id= "statistics"></p>
 </body>
 <script src="c4Game.js"></script>
 </html>
