final, on website now

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
-	<h1>CONNECT 4 GAME --- COMP4106 A2 --- AROBERTS</h1>
+	<h1>CONNECT 4 GAME --- ADROBERTS</h1>
+	<a id = "ghLink" href = "https://github.com/anthonydroberts/C4AI" target="_blank">Github</a>
+	<br><br>
 	<form>
 		Select type of C4 to play:
 		<select id="SelectGameType">
@@ -99,6 +101,7 @@
     </table>
 	<p id= "statistics"></p>
 	<p id= "endString" style="visibility:hidden">Placeholder</p>
+
 </body>
 <script src="c4Game.js"></script>
 </html>
